Add metric for avslutningstype